k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logicflow-ingress
  namespace: logicflow
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "logicflow-ingress-ip"
    networking.gke.io/managed-certificates: "logicflow-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "logicflow-frontend-config"
spec:
  rules:
    - host: chat.mammas.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logicflow-service
                port:
                  number: 8080
